<resources>
    <string name="app_name">E-Shelter</string>
    <string name="e_shelter">e-shelter</string>
    <string name="sign_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="go_to_sign_up">Впервые в e-shelter?</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="sign_in_shelter_admin">Вход для представителей приюта</string>
    <string name="get_password_shelter_admin">Получить статус администратора</string>
    <string name="shelter_logo">Логотип приюта</string>
    <string name="add_shelter_logo">Добавить логотип</string>
    <string name="shelter">Приют:</string>
    <string name="shelter_name">\"Название приюта\"</string>
    <string name="address">Адрес</string>
    <string name="phone_number">Номер телефона</string>
    <string name="cats">Кошки</string>
    <string name="dogs">Собаки</string>
    <string name="exotic">Экзоты</string>
    <string name="shelter_name_hint">Название приюта</string>
    <string name="animal_photo">Фотография животного</string>
    <string name="pet_name">Кличка</string>
    <string name="age">Возраст:</string>
    <string name="gender">Пол:</string>
    <string name="sterilisation">Стерилизация</string>
    <string name="yes_no">Да/Нет</string>
    <string name="vaccinations">Прививки</string>
    <string name="breed">Порода:</string>
    <string name="description">Описание</string>
    <string name="description_hint">Характер, отличительные особенности и т.д. </string>
    <string name="num_days_in_shelter">В приюте уже n дней</string>
    <string name="add_photo">Добавить фото</string>
    <string name="years">лет</string>
    <string name="species">Вид:</string>
    <string name="admission_date">Дата поступления в приют</string>
    <string name="save">Сохранить</string>
    <string name="animal_info">Сведения о животном</string>
    <string name="apply_for_adoption">Подать заявку на \"усыновление\"</string>
    <string name="adoption_applications">Заявки на \"усыновление\"</string>
    <string name="adoption_application_form">Заявка на \"усыновление\"</string>
    <string name="signing_up">Регистрация</string>
    <string name="email">E-mail</string>
    <string name="find_friend">Найти друга</string>
    <string name="pick_search_parameters">Выберите параметры поиска</string>
    <string name="city">Город:</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="search">Поиск</string>
    <string name="search_result">Результаты поиска</string>
    <string name="zero_results">К сожалению, по вашему запросу не было найдено ни одного результата.</string>
    <string name="favourites">Избранное</string>
    <string name="shelter_admin_sign_up_info">
        Пожалуйста, заполните краткие сведения о Вашем приюте и оставьте свои контактные данные.\n
        После проверки мы вышлем Вам пароль для входа на указанный e-mail.
    </string>
    <string name="social_links">Ссылки на соцсети (если есть)</string>
    <string name="send_application_shelter_admin">Отправить заявку</string>
    <string name="shelter_report">Отчёт о деятельности приюта</string>
    <string name="select_report_period">Укажите отчётный период</string>
    <string name="select_report_period_button">Выбрать отчётный период</string>
    <string name="report_period">Отчётный период</string>
    <string name="select_format">Выберите формат документа</string>
    <string name="docx">docx</string>
    <string name="xlsx">xlsx</string>
    <string name="pdf">pdf</string>
    <string name="get_report">Получить отчёт</string>
    <string name="select_date">Выбрать дату</string>
    <string name="banner">Баннер</string>
    <string name="name">Имя</string>
    <string name="email_exists">Пользователь с данным email уже зарегистрирован в системе</string>
    <string name="phone_exists">Пользователь с данным номером телефона уже зарегистрирован в системе</string>
    <string name="sign_up_success">Регистрация прошла успешно</string>
    <string name="login_not_exists">Пользователя с данным логином не существует</string>
    <string name="wrong_password">Введён неверный пароль</string>
    <string name="shelter_admin_apply_success">Заявка была успешно сформирована. Ожидайте ответа на указанный email.</string>
    <string name="save_data_success">Данные были сохранены</string>
    <string name="without_breed">Порода неизвестна/Беспородный(-ая)</string>
    <string name="current_status">Текущий статус</string>
    <string name="delete_confirmation">Удалить запись?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="shelter_address">Находится по адресу:</string>
    <string name="add_to_favourites_success">Запись была добавлена в \"Избранное\"</string>
    <string name="delete_from_favourites_success">Запись была удалена из \"Избранного\"</string>
    <string name="adoption_application_created">Заявка успешно сформирована. Ожидайте звонка от администратора приюта.</string>
    <string name="application_already_exist">Заявка уже была сформирована. Ожидайте звонка от администратора приюта.</string>
    <string name="all">Все</string>
    <string name="zero_in_favourites">Список \"Избранного\" пуст.</string>
    <string name="application_date">Дата</string>
    <string name="zero_applications">Список заявок пуст.</string>
    <string name="sign_up_error">При регистрации возникла ошибка. Проверьте корректность введённых данных и попробуйте ещё.</string>
    <string name="get_report_success">Отчёт был успешно сохранён</string>
    <string name="get_report_error">Ошибка при формировании отчёта</string>
</resources>